--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Replace Action'
+name: 'Simple Replace Action'
 description: 'Replaces substrings in files. Useful to enrich configs with previous steps artifacts.'
-author: Data Monsters
+author: LB
 branding:
   icon: 'repeat'  
   color: 'green'
